fix a bug that repos link width is too narrow

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@
 	font-style: italic;
 	text-align: center;
 	height:20px;
-	width: 120px;
+	width: 140px;
 	padding-bottom: auto;
 	padding-top: auto;
 	margin-left: auto;
